@@ -24,16 +24,19 @@
 #include <bson.h>
 
 #include "mongoc-client-pool.h"
+#include "mongoc-topology-description.h"
 
 BSON_BEGIN_DECLS
 
 /* for tests */
 void
-_mongoc_client_pool_set_stream_initiator (mongoc_client_pool_t      *pool,
-                                          mongoc_stream_initiator_t  si,
-                                          void                      *user_data);
+_mongoc_client_pool_set_stream_initiator     (mongoc_client_pool_t      *pool,
+                                              mongoc_stream_initiator_t  si,
+                                              void                      *user_data);
 size_t
-mongoc_client_pool_get_size              (mongoc_client_pool_t      *pool);
+mongoc_client_pool_get_size                  (mongoc_client_pool_t      *pool);
+mongoc_topology_description_t *
+_mongoc_client_pool_get_topology_description (mongoc_client_pool_t      *pool);
 
 BSON_END_DECLS
 
