@@ -70,6 +70,7 @@ extern void test_socket_install                  (TestSuite *suite);
 extern void test_stream_install                  (TestSuite *suite);
 extern void test_thread_install                  (TestSuite *suite);
 extern void test_topology_install                (TestSuite *suite);
+extern void test_topology_description_install    (TestSuite *suite);
 extern void test_topology_reconcile_install      (TestSuite *suite);
 extern void test_topology_scanner_install        (TestSuite *suite);
 extern void test_uri_install                     (TestSuite *suite);
@@ -1815,6 +1816,7 @@ main (int   argc,
    test_stream_install (&suite);
    test_thread_install (&suite);
    test_topology_install (&suite);
+   test_topology_description_install (&suite);
    test_uri_install (&suite);
    test_usleep_install (&suite);
    test_util_install (&suite);
